mnd.htmlをdiv:activeからdivに変更

--- a/kadai_mdn_css/mdn.html
+++ b/kadai_mdn_css/mdn.html
@@ -10,10 +10,9 @@
         height: 150px;
         background-color: skyblue;
       }
-      div:active {
+      div {
         rotate: 1 1 1 20deg;
       }
-
     </style>
   </head>
   <body>
